Fixed hidden y overflow on mobile

--- a/docs/tsktask/css/main.css
+++ b/docs/tsktask/css/main.css
@@ -43,7 +43,7 @@ body {
 
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /*** HEADER NAV ***/
